Modularized a lot of duplicate code, removed the remaining unused imports and improved the flow of the code